Update aggregator calls, add endpoint to get feeds
Fixes #33
Fixes #34
